--- a/Slider.html
+++ b/Slider.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script type="text/javascript" src="js/script.js"></script>
+	<script type="text/javascript" src="js/conf.js"></script>
 </head>
 <body>
 
